# fprep

./: .zenodo.json  README.md  pyproject.toml  setup.cfg
src/fprep/: heuristic.py  qa.py  subjutil.py
src/fprep/data/: fprep_logo.txt
