[project]
name = "fprep"
description = "fprep: Preprocessing of fMRI data"
version = "1.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Neal W Morton", email = "mortonne@gmail.com"}]
keywords = ["fMRI", "neuroimaging"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
urls = {project = "https://github.com/prestonlab/fprep"}
dependencies = [
    "numpy<2.0",
    "pydicom",
    "matplotlib",
    "nibabel",
    "statsmodels",
    "scikit-learn",
    "reportlab"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
