[metadata]
name = fprep
version = 1.0.0
url = https://github.com/prestonlab/fprep
author = Neal Morton
author_email = mortonne@gmail.com
description = fprep: Preprocessing of fMRI data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fMRI, neuroimaging
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    pydicom
    matplotlib
    nibabel
    statsmodels
    sklearn
    reportlab
package_dir =
    = src
packages = find:

[options.package_data]
fprep = data/*.txt

[options.packages.find]
where = src
